# jacto-codechallenge

./: README.md
EnviarApp/: AbreArquivo.qml  CMakeLists.txt  Main.qml  Principal.qml  TransmitirComando.qml  carregaarquivo.cpp  carregaarquivo.h  enviarcomando.cpp  enviarcomando.h  main.cpp  qml.qrc
ReceberApp/: CMakeLists.txt  Main.qml  main.cpp  receiver.h
